--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - pip install coveralls
 
 script:
-  - coverage run --source=hoge_test setup.py test
+  - execute.py
 
 after_success:
   - coveralls
