--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - pip install coveralls
 
 script:
-  - execute.py
+  - coverage run --source=hoge_test setup.py test
 
 after_success:
   - coveralls
