--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,6 @@ language: python
 
 python:
   - 2.7
-  - 3.3
-  - 3.4
 
 # command to install dependencies
 install:
@@ -12,11 +10,7 @@ install:
 # command to run tests
 script:
   - python execute.py
-#  - coverage run --source=hoge_test setup.py test
-
-after_success:
-  - coveralls
 
 notifications:
-  slack:
-    secure: your_token_key
+  email: false
+
